--- a/src/App.css
+++ b/src/App.css
@@ -1,59 +1,17 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
 .App {
-    background-color: rgb(0, 0, 0);
-    width: 200px;
-    color: white;
+    /* display: grid; */
+    /* grid-template-columns: 200px 1fr; */
+    /* display: flex; */
+    display: grid;
+    grid-template-columns: 200px 1fr;
+
+}
+
+.navbar {
+    border: 1px solid green;
     height: 100vh;
-    border-right: 3px solid rgba(3, 3, 233, 0.744);
 }
-.App h3 {
-    text-align: center;
-    padding-top: 30px;
+.contents {
+    border: 1px solid red;
+    min-height: 100vh;
 }
-.sidebar{
-    display: flex;
-    flex-direction: column;
-
-
-}
-.div1 {
-    margin-top: 30px;
-    margin-bottom: 200px;
-}
-.div2 {
-    /* display: flex;
-    flex-direction: column; */
-    position: absolute;
-    bottom: 10px;
-    /* border: 1px solid green; */
-    width: 200px;
-
-}
-.div2 .myprofile{
-    /* margin-bottom: 1px; */
-}
-.dashboard, .knowledge, .members, .teams, .vault, .chat, .settings, .company, .myprofile {
-    padding: 7px 0 7px 20px;
-    cursor: pointer;
-}
-.dashboard:hover, .knowledge:hover, .members:hover, .teams:hover, .vault:hover, .chat:hover, .settings:hover, .company:hover, .myprofile:hover {
-    background-color: rgba(128, 128, 128, 0.807);
-}
-
-
-
-.footernote {
-    font-size: 12px;
-    text-align: center;
-    padding-top: 9px;
-}
-
-
-.chat span, .company span, .dashboard span, .knowledge span, .members span, .teams span, .vault span, .settings span, .myprofile span{
-    margin-right: 17px;
-}
-
