--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,7 @@
     background-color: black;
     color: white;
     border-right: 3px solid rgba(23, 23, 227, 0.771);
+    /* position: fixed; */
 }
 .navbar h3 {
     text-align: center;
@@ -54,4 +55,8 @@
 .contents {
     /* border: 1px solid red; */
     min-height: 100vh;
+}
+.hrline {
+    padding:0;
+   
 }
